// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example - client -  snapshot testing using testing-library 1`] = `
<DocumentFragment>
  <div>
    <h2>
      Hello from Example React component 1
    </h2>
    <p>
      props.title:changed title
    </p>
    <p>
      The text you entered:
    </p>
    <input
      value=""
    />
    <button>
      Convert to uppercase
    </button>
  </div>
</DocumentFragment>
`;

exports[`Example - client - snapshot testing using react-test-renderer 1`] = `
<div>
  <h2>
    Hello from Example React component 1
  </h2>
  <p>
    props.title:
  </p>
  <p>
    The text you entered:
    
  </p>
  <input
    onChange={[Function]}
    value=""
  />
  <button
    onClick={[Function]}
  >
    Convert to uppercase
  </button>
</div>
`;
